UTA FabLab base changes

--- a/src/modules/octopi/config
+++ b/src/modules/octopi/config
@@ -3,7 +3,7 @@
 
 # OctoPrint archive
 [ -n "$OCTOPI_OCTOPRINT_ARCHIVE" ] || OCTOPI_OCTOPRINT_ARCHIVE=$(wget -q -O - https://api.github.com/repos/foosel/OctoPrint/releases/latest | grep "zipball_url" | cut -d : -f 2,3 | tr -d \" | tr -d ,)
-[ -n "$OCTOPI_OCTOPRINT_REPO_SHIP" ] || OCTOPI_OCTOPRINT_REPO_SHIP=https://github.com/foosel/OctoPrint.git
+[ -n "$OCTOPI_OCTOPRINT_REPO_SHIP" ] || OCTOPI_OCTOPRINT_REPO_SHIP=https://github.com/UTA-FabLab/OctoPuppet.git
 [ -n "$OCTOPI_INCLUDE_OCTOPRINT" ] || OCTOPI_INCLUDE_OCTOPRINT=yes
 
 # PyBonjour archive
@@ -19,7 +19,7 @@
 [ -n "$OCTOPI_MJPGSTREAMER_REPO_BUILD" ] || OCTOPI_MJPGSTREAMER_REPO_BUILD=
 [ -n "$OCTOPI_MJPGSTREAMER_REPO_BRANCH" ] || OCTOPI_MJPGSTREAMER_REPO_BRANCH=master
 [ -n "$OCTOPI_MJPGSTREAMER_REPO_DEPTH" ] || OCTOPI_MJPGSTREAMER_REPO_DEPTH=1
-[ -n "$OCTOPI_INCLUDE_MJPGSTREAMER" ] || OCTOPI_INCLUDE_MJPGSTREAMER=yes
+[ -n "$OCTOPI_INCLUDE_MJPGSTREAMER" ] || OCTOPI_INCLUDE_MJPGSTREAMER=no
 
 # FFMPEG HLS
 [ -n "$OCTOPI_INCLUDE_FFMPEG_HLS" ] || OCTOPI_INCLUDE_FFMPEG_HLS=yes
@@ -37,3 +37,15 @@
 
 # Fixed apt mirror
 [ -n "$OCTOPI_APTMIRROR" ] || OCTOPI_APTMIRROR=
+
+# Secrets
+[ -n "$OCTOPI_GIT_FL_TOKEN" ] || OCTOPI_GIT_FL_TOKEN=
+[ -n "$OCTOPI_PASSWD" ] || OCTOPI_PASSWD=
+[ -n "$OCTOPI_SSH_PORT" ] || OCTOPI_SSH_PORT=
+
+
+# Maintanence Scripts repo & branch
+[ -n "$OCTOPI_SCRIPTS_GIT_PATH" ] || OCTOPI_SCRIPTS_GIT_PATH=
+[ -n "$OCTOPI_SCRIPTS_GIT_BRANCH" ] || OCTOPI_SCRIPTS_GIT_BRANCH=
+# Maintanence Settings
+[ -n "$OCTOPI_CHANGE_ACCESS_SETTINGS" ] || OCTOPI_CHANGE_ACCESS_SETTINGS=yes
