--- a/src/config
+++ b/src/config
@@ -1,4 +1,4 @@
 export DIST_NAME=OctoPi
 export DIST_VERSION=0.18.0
-export MODULES="base(raspicam, network, disable-services(octopi), password-for-sudo)"
+export MODULES="base(cockpit-install,raspicam, network, disable-services(octopi), password-for-sudo)"
 
