Update NGINX config

--- a/src/modules/octopi/config
+++ b/src/modules/octopi/config
@@ -24,8 +24,8 @@
 # FFMPEG HLS
 [ -n "$OCTOPI_INCLUDE_FFMPEG_HLS" ] || OCTOPI_INCLUDE_FFMPEG_HLS=yes
 
-# HAProxy
-[ -n "$OCTOPI_INCLUDE_HAPROXY" ] || OCTOPI_INCLUDE_HAPROXY=yes
+# Nginx
+[ -n "$OCTOPI_INCLUDE_NGINX" ] || OCTOPI_INCLUDE_NGINX=yes
 
 # WiringPi
 [ -n "$OCTOPI_INCLUDE_WIRINGPI" ] || OCTOPI_INCLUDE_WIRINGPI=yes
