Bulk commit - FabLab 21.12

--- a/src/modules/octopi/config
+++ b/src/modules/octopi/config
@@ -45,7 +45,7 @@
 
 
 # Maintanence Scripts repo & branch
-[ -n "$OCTOPI_SCRIPTS_GIT_PATH" ] || OCTOPI_SCRIPTS_GIT_PATH=
-[ -n "$OCTOPI_SCRIPTS_GIT_BRANCH" ] || OCTOPI_SCRIPTS_GIT_BRANCH=
+[ -n "$OCTOPI_SCRIPTS_GIT_PATH" ] || OCTOPI_SCRIPTS_GIT_PATH=https://github.com/UTA-FabLab/scripts
+[ -n "$OCTOPI_SCRIPTS_GIT_BRANCH" ] || OCTOPI_SCRIPTS_GIT_BRANCH=rf2
 # Maintanence Settings
 [ -n "$OCTOPI_CHANGE_ACCESS_SETTINGS" ] || OCTOPI_CHANGE_ACCESS_SETTINGS=yes
