--- a/src/modules/octopi/config
+++ b/src/modules/octopi/config
@@ -32,14 +32,14 @@
 # Fixed apt mirror
 [ -n "$OCTOPI_APTMIRROR" ] || OCTOPI_APTMIRROR=
 
-# Secrets
-[ -n "$OCTOPI_GIT_FL_TOKEN" ] || OCTOPI_GIT_FL_TOKEN=
-[ -n "$OCTOPI_PASSWD" ] || OCTOPI_PASSWD=
-[ -n "$OCTOPI_SSH_PORT" ] || OCTOPI_SSH_PORT=
+# # Secrets
+# [ -n "$OCTOPI_GIT_FL_TOKEN" ] || OCTOPI_GIT_FL_TOKEN=
+# [ -n "$OCTOPI_PASSWD" ] || OCTOPI_PASSWD=
+# [ -n "$OCTOPI_SSH_PORT" ] || OCTOPI_SSH_PORT=
 
 
-# Maintanence Scripts repo & branch
-[ -n "$OCTOPI_SCRIPTS_GIT_PATH" ] || OCTOPI_SCRIPTS_GIT_PATH=https://github.com/UTA-FabLab/scripts
-[ -n "$OCTOPI_SCRIPTS_GIT_BRANCH" ] || OCTOPI_SCRIPTS_GIT_BRANCH=rf2
+# # Maintanence Scripts repo & branch
+# [ -n "$OCTOPI_SCRIPTS_GIT_PATH" ] || OCTOPI_SCRIPTS_GIT_PATH=https://github.com/UTA-FabLab/scripts
+# [ -n "$OCTOPI_SCRIPTS_GIT_BRANCH" ] || OCTOPI_SCRIPTS_GIT_BRANCH=rf2
 # Maintanence Settings
 [ -n "$OCTOPI_CHANGE_ACCESS_SETTINGS" ] || OCTOPI_CHANGE_ACCESS_SETTINGS=yes
