--- a/src/modules/octopi/config
+++ b/src/modules/octopi/config
@@ -39,7 +39,8 @@
 
 
 # Maintanence Scripts repo & branch
-[ -n "$OCTOPI_SCRIPTS_GIT_PATH" ] || OCTOPI_SCRIPTS_GIT_PATH=https://github.com/UTA-FabLab/scripts
-[ -n "$OCTOPI_SCRIPTS_GIT_BRANCH" ] || OCTOPI_SCRIPTS_GIT_BRANCH=rf2
+[ -n "$OCTOPI_SCRIPTS_GIT_PATH" ] || OCTOPI_SCRIPTS_GIT_PATH=github.com/UTA-FabLab/scripts
+[ -n "$OCTOPI_SCRIPTS_GIT_BRANCH" ] || OCTOPI_SCRIPTS_GIT_BRANCH=21.04/3dp
+
 # Maintanence Settings
 [ -n "$OCTOPI_CHANGE_ACCESS_SETTINGS" ] || OCTOPI_CHANGE_ACCESS_SETTINGS=yes
